kubernetes/phpinfo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: phpinfo
  name: phpinfo
  namespace: dwikikurnia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: phpinfo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: phpinfo
    spec:
      containers:
      - image: tomcat:jre8-alpine
        name: php
        resources: {}
