kubernetes/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
        name: dwikikurnia-sample-pod
spec:
        containers:
                - name: dwikikurnia-containers-01
                  image: alpine:3.12
                  tty: true 
                  stdin: true
                  resources: 
                        requests:
                                cpu: 200m
                                memory: 500Mi
                        limits:
                                cpu: 200m
                                memory: 500Mi
