kubernetes/dwikikurnia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dwikikurnia-nodejs
  name: dwikikurnia-nodejs
  namespace: dwikikurnia
spec:
  ports:
  - port: 3000
    nodePort: 31213
    protocol: TCP
    targetPort: 3000
  selector:
    app: dwikikurnia-nodejs
  type: NodePort
status:
  loadBalancer: {}
