kubernetes/google.yaml
---
apiVersion: v1
kind: Service
metadata:
        name: google-dwikikurnia-service
        namespace: dwikikurnia
spec:
        type: ExternalName
        externalName: www.google.com
---
apiVersion: v1
kind: Service
metadata:
        name: lb-dwikikurnia-service
        namespace: dwikikurnia
spec:
        type: LoadBalancer
        selector:
                app: helloworld
        ports:
                - port: 80
                  targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
        name: nodeport-dwikikurnia-service
        namespace: dwikikurnia
spec:
        type: NodePort
        selector:
                app: helloworld
        ports:
                - nodePort: 30080
                  port: 80
                  targetPort: 80
