kubernetes/nginx2.yaml
---
apiVersion: v1
kind: Service
metadata:
        name: helloworld-dwikikurnia-service
        namespace: dwikikurnia
spec:
        selector:
                app: helloworld
        ports:
                - port: 8080
                  targetPort: 80
