kubernetes/posttest.yaml
---
apiVersion: v1
kind: Service
metadata:
        name: svc-webapp
        labels:
                name: web-app
spec:
        type: NodePort
        selector:
                app: web-app
        ports:
                - port: 8081
                  targetPort: 80
                  nodePort: 30005

---
apiVersion: v1
kind: Pod
metadata:
        name: webapp
        labels:
                name: webapp
spec:
        containers:
                - name: webapp
                  image: nginx
