kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
	name: nginx-service-dwikikurnia
spec:
	selector:
                name: nginx 
	ports:
		- port: 8080
		  targetPort: 80
